--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 <body>
   <div class="wrap">
     <header>
-      <div class="avatar">AY</div>
-      <div>
+      <div class="avatar">
+      <img src="profile.jpg" alt="Aref Yelghi" style="width:100%; height:100%; border-radius:14px; object-fit:cover;">
+      </div>
+
         <h1>Aref Yelghi</h1>
         <p class="lead">Data Analyst • Machine Learning & Optimization • FinTech</p>
         <div style="color:var(--text); font-weight:600;">Persian • Turkish • English</div>
