--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       --bg:#f6f8fb;
       --card:#ffffff;
       --accent:#6b8ef0;
-      --text:#000000; /* تمام متن‌ها سیاه */
+      --text:#000000;
       --glass: rgba(99,102,241,0.08);
     }
     *{box-sizing:border-box}
@@ -39,9 +39,10 @@
   <div class="wrap">
     <header>
       <div class="avatar">
-      <img src="profile.jpg" alt="Aref Yelghi" style="width:100%; height:100%; border-radius:14px; object-fit:cover;">
+        <img src="profile.jpg" alt="Aref Yelghi" style="width:100%; height:100%; border-radius:14px; object-fit:cover;">
       </div>
 
+      <div>
         <h1>Aref Yelghi</h1>
         <p class="lead">Data Analyst • Machine Learning & Optimization • FinTech</p>
       </div>
@@ -54,6 +55,7 @@
       <a href="#industry">Industry</a>
       <a href="#skills">Skills & Certificates</a>
       <a href="#courses">Courses</a>
+      <a href="#languages">Languages</a>
       <a href="#contact">Contact</a>
     </nav>
 
@@ -126,10 +128,10 @@
             <ul>
               <li>Neural Networks and Deep Learning</li>
               <li>MLOps: Getting Started</li>
-              <li>Improving Deep Neural Networks: Hyperparameter Tuning, Regularization & Optimization</li>
-              <li>Building Recommender Systems with ML & AI</li>
-              <li>Generative AI with Large Language Models</li>
-              <li>Generative AI Applications with RAG & LangChain</li>
+              <li>Improving Deep Neural Networks</li>
+              <li>Building Recommender Systems</li>
+              <li>Generative AI with LLMs</li>
+              <li>Generative AI with RAG & LangChain</li>
               <li>DevOps, DataOps, MLOps</li>
             </ul>
           </div>
@@ -137,13 +139,12 @@
             <strong>Technical Skills</strong>
             <ul>
               <li>Programming: C++, Java, Python (Django)</li>
-              <li>ML & DL: Pandas, NumPy, Matplotlib, Seaborn, SciPy, Scikit-learn, TensorFlow, Keras, PyTorch, Surprise</li>
+              <li>ML & DL: Pandas, NumPy, SciPy, Scikit-learn, TensorFlow, Keras, PyTorch</li>
               <li>Optimization, Metaheuristics, Neuro-Fuzzy Systems</li>
-              <li>Database Design: SQL</li>
+              <li>Database: SQL</li>
               <li>Cloud: AWS, GCP (Vertex AI)</li>
-              <li>Containers & Deployment: Docker, Kubernetes, REST, Service Mesh</li>
-              <li>MLOps: MLflow, CI/CD pipelines; RAG workflows for conversational AI</li>
-              <li>Computer Vision: PyTorch, TensorFlow</li>
+              <li>Deployment: Docker, Kubernetes, REST</li>
+              <li>MLOps: MLflow, CI/CD, RAG pipelines</li>
             </ul>
           </div>
         </div>
@@ -157,7 +158,7 @@
             <ul>
               <li>Operating System</li>
               <li>Computer Network</li>
-              <li>Algorithm Analysis & Data Structure</li>
+              <li>Algorithm Analysis</li>
               <li>Optimization</li>
               <li>Programming Language</li>
               <li>Machine Learning</li>
@@ -168,20 +169,17 @@
           <div>
             <strong>Postgraduate</strong>
             <ul>
-              <li>Advanced Artificial Intelligence Topics</li>
+              <li>Advanced AI Topics</li>
               <li>Expert Systems & Fuzzy Systems</li>
             </ul>
           </div>
         </div>
+      </section>
 
-        <div style="margin-top:12px">
-          <strong>Master’s Thesis Supervision</strong>
-          <ul>
-            <li>Rıdvan ÖZCAN — Android Application for Detecting Historical Structures Using AI</li>
-            <li>Yunus EMRE BALTACI — Security Analysis of Android Applications Using Deep Learning</li>
-            <li>Salim GÖVERCİN — E-Commerce Shopping Recommendation System Using Deep Learning</li>
-          </ul>
-        </div>
+      <!-- ⭐⭐⭐ جدید: بخش تسلط زبان‌ها ⭐⭐⭐ -->
+      <section id="languages" class="card">
+        <h2>Language Proficiency</h2>
+        <p><strong>Proficient in English, Turkish, and Persian.</strong></p>
       </section>
 
       <section id="contact" class="card">
