--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <li>Research combining reinforcement learning and optimization algorithms for national projects</li>
               <li>Machine learning research for natural language processing</li>
               <li>Published in reputable CS journals & conferences</li>
-              <li>Taught undergraduate and graduate courses in AI & ML; supervised PhD and MSc students</li>
+              <li>Taught AI and ML courses at undergraduate and graduate levels/li>
               <li>Developed novel neural network architectures for recommendation systems</li>
             </ul>
           </div>
