--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <a href="#education">Education</a>
       <a href="#academic">Academic</a>
       <a href="#industry">Industry</a>
+      <a href="#industry-new">Recent Industry</a>
       <a href="#skills">Skills & Certificates</a>
       <a href="#courses">Courses</a>
       <a href="#languages">Languages</a>
@@ -113,6 +114,15 @@
         <ul>
           <li>Led data science team designing predictive models in finance</li>
           <li>Implemented ML algorithms for personalized recommendations</li>
+        </ul>
+      </section>
+
+      <!-- Recent Industry Experience -->
+      <section id="industry-new" class="card">
+        <h2>Recent Industry Experience</h2>
+        <p><strong>Artificial Intelligence Researcher</strong>, NellaDerm — Full-time (Nov 2024 - Present)</p>
+        <ul>
+          <li>Working remotely on AI research projects and model development</li>
         </ul>
       </section>
 
